[package]
name = "sfsu"
description = "Stupid Fast Scoop Utils"
version = "1.6.0"
edition = "2021"

[workspace]
members = ["sfsu-derive", "logger"]

[profile.release]
codegen-units = 1

[dependencies]
sfsu-derive = { path = "./sfsu-derive" }
logger = { path = "./logger" }

anyhow = "1.0"
chrono = { version = "0.4.20", features = [
    "serde",
    "clock",
    "std",
], default-features = false }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
derive_more = "0.99"
directories = "5.0"
dunce = "1.0"
git2 = "0.18"
itertools = "0.12"
quork = "0.6"
rayon = "1.8"
regex = "1.10"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
scopeguard = "1.2.0"
log = "0.4.20"
