[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
human-panic = "1.2"
uuid = { version = "1.6", features = ["v7"] }
tracing-appender = "0.2"
log = "0.4.20"
